[FIX] Decrease room leader bar z-index (#11450)

--- a/packages/rocketchat-theme/client/imports/general/base_old.css
+++ b/packages/rocketchat-theme/client/imports/general/base_old.css
@@ -5729,7 +5729,7 @@ body:not(.is-cordova) {
 
 .room-leader {
 	position: absolute;
-	z-index: 10;
+	z-index: 9;
 	right: 0;
 	left: 0;
 
